add advanced excercise

--- a/dataCleaning_slides.html
+++ b/dataCleaning_slides.html
@@ -284,7 +284,15 @@ bind_rows(select(boysNames[[1]], Name, Count),
 
 </article></slide><slide class=''><hgroup><h2></h2></hgroup><article >
 
-<p>In the previous examples we learned how to drop empty rows with <code>filter</code>, select only relevant columns with <code>select</code>, and re-arrange our data with <code>select</code> and <code>bind_rows</code>. In each case we applied the changes only to the first element of our <code>boysNames</code> list. Your task now is to use the <code>map</code> function to apply each of these transformations to all the elements in <code>boysNames</code>.</p></article></slide>
+<p>In the previous examples we learned how to drop empty rows with <code>filter</code>, select only relevant columns with <code>select</code>, and re-arrange our data with <code>select</code> and <code>bind_rows</code>. In each case we applied the changes only to the first element of our <code>boysNames</code> list.</p>
+
+<p>Your task now is to use the <code>map</code> function to apply each of these transformations to all the elements in <code>boysNames</code>.</p>
+
+</article></slide><slide class=''><hgroup><h2></h2></hgroup><article >
+
+<p>In the previous exercise we cleaned up the &quot;top 100&quot; boys names data. The Excel files contain addiontal sheets, one of which contains <em>all</em> the boys names.</p>
+
+<p>Repeat the data cleaning process we used for the &quot;top 100&quot; data using the sheets containing all boys names.</p></article></slide>
 
 
   <slide class="backdrop"></slide>
